Fixing all alignments

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ body {
 
 .navbar-header button.navbar-toggler {
   clear: both;
-  /* margin-top: -30px; */
+  margin-top: -30px;
 }
 
 /* END HEADER */
@@ -50,7 +50,8 @@ body {
 /** MAIN BODY **/
 
 #main-container.container {
-	padding: 0;
+	/* padding: 0; */
+	padding-left: 2em;
 	margin: auto;
 }
 
@@ -330,11 +331,11 @@ div#socials > a {
 /* SIDE BAR */
 
 	.dp {
-		padding: 0px;
-		margin-top: 20px;
-		margin-bottom: 20px;
-		margin-right: 20px;
-		margin-left: 5px;
+		padding: 0; 
+		margin-top: 0.8em;
+		margin-bottom: 0.8em;
+		margin-right: 0.8em;
+		margin-left: -0.14em;
 		border-style: solid;
 		border-radius: 50%;
 		border-width: 2.5px;
@@ -344,11 +345,11 @@ div#socials > a {
 	}
 
 	#left-bar-name {
-		padding: 0px;
-		margin-top: 20px;
-		margin-bottom: 20px;
-		margin-right: 20px;
-		margin-left: 0px;
+		padding: 0;
+		margin-top: 0.8em;
+		margin-bottom: 0.8em;
+		margin-right: 0.8em;
+		margin-left: -0.28em;
 	}
 
 /* END SIDE BAR */
